# RuleK

./: .env.example  .gitignore  .pre-commit-config.yml  AGENT.md  AI_Quick_Start_Guide.md  API_FIX_README.md  CHANGELOG.md  CLI_FIX_REPORT.md  CLI_TEST_FIX_REPORT.md  CURRENT_PROGRESS.md  FIXED_AND_READY.md  FIX_SUMMARY.md  MAIN_AGENT.md  Makefile  OPTIMIZE_NOW.md  PHASE1_TODO.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  README.md  RESTRUCTURE_PLAN.md  RESTRUCTURE_SUMMARY.md  SMART_DEBUG_GUIDE.md  WEB_DEVELOPMENT_GUIDE.md  analyze_project.py  api_test.html  apply_additional_fixes.py  apply_ai_fixes.py  apply_fixes.py  auto_fix_cli_tests.py  auto_test_fix.py.backup  check_event_fix.py  clean_and_test.py  cleanup.sh  cleanup_report.md  cli_test_runner.py.backup  complete_fix.py  complete_fix_workflow.py  debug_cli_tests.py  debug_report.md  diagnose_and_fix.py  (+64 more)
config/: config.json
data/: rule_templates.json
deploy/: nginx.conf
docs/: .DOCS_AGENT.md  AI_INTEGRATION_FIX_REPORT.md  AI_ISSUES_FIXED.md  AI_Integration_Implementation_Guide.md  AI_Integration_Phase3_Complete_Report.md  AI_Integration_Phase3_Summary.md  AI_Integration_Plan.md  AI_Integration_Progress_Report.md  AI_Integration_Progress_Report_Phase3_Complete.md  AI_Integration_Quick_Reference.md  API_FIX_REPORT.md  API_FIX_REPORT_ROUND2.md  API_TEST_GUIDE.md  CLI_Testing_and_Development.md  DEPLOYMENT.md  FIX_RULE_CREATION_ROUTE.md  FIX_SUMMARY.md  INDEX.md  NEXT_STEPS.md  Next_Development_Prompts.md  PROJECT_RESTRUCTURE_PLAN.md  PROJECT_STATUS.md  PROJECT_STATUS_REPORT.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_FIXED.md  QUICK_START_GAME.md  README.md  REMAINING_TASKS.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_GUIDE.md  (+18 more)
(+344 files in other folders)
