[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rulek"
version = "0.1.0"
description = "Rule-based knowledge system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.5.0",
    "httpx==0.25.2",
    "jinja2==3.1.6",
    "tenacity==9.1.2",
    "colorama==0.4.6",
    "loguru==0.7.2",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "coverage==7.3.2",
    "pytest-playwright==0.4.3",
    "playwright==1.39.0",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
    "alembic==1.16.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_api: marks tests that require API access",
    "timeout: marks tests with timeout limit",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_typed = true
warn_untyped_fields = true
